--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "mocha src/test/**/*.test.js --timeout 5000"
+    "test": "mocha src/test/**/*.test.js --timeout 5000 --exit"
   },
   "keywords": [],
   "author": "",
@@ -22,11 +22,12 @@
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "supertest": "^7.1.1"
   },
   "devDependencies": {
     "chai": "^4.5.0",
-    "mocha": "^10.8.2",
-    "supertest": "^7.1.1"
+    "mocha": "^10.8.2"
+    
   }
 }
