--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "mocha src/test/**/*.test.js --timeout 5000 --exit"
   },
   "keywords": [],
@@ -16,18 +16,18 @@
     "@faker-js/faker": "^9.7.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
+    "supertest": "^7.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.17.0",
-    "supertest": "^7.1.1"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "chai": "^4.5.0",
     "mocha": "^10.8.2"
-    
   }
 }
